Fix charity image size issue on mobile

--- a/src/components/EventDetails/EventDetails.scss
+++ b/src/components/EventDetails/EventDetails.scss
@@ -37,6 +37,7 @@
     }
 
     .charities img {
+      max-width: 100%;
       width: 400px;
     }
 
